# carpi

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  third_party.md
bluetooth_utils/: CMakeLists.txt
bluetooth_utils/include/bluetooth_utils/: BluetoothConnection.hpp  BluetoothDevice.hpp  BluetoothManager.hpp  BluetoothServer.hpp  bluetooth_connection.hpp  bluetooth_manager.hpp  bluetooth_server.hpp  low_energy.hpp
bluetooth_utils/src/: BluetoothConnection.cpp  BluetoothDevice.cpp  BluetoothManager.cpp  BluetoothServer.cpp  bluetooth_connection.cpp  bluetooth_device.cpp  bluetooth_manager.cpp  bluetooth_server.cpp  low_energy.cpp
camera_slave/: CMakeLists.txt
camera_slave/src/: main.cpp
camera_slave/src/camera/: RawCameraStream.cpp  RawCameraStream.hpp
carpi_browser_subprocess/: CMakeLists.txt
carpi_browser_subprocess/resources/: config.toml
carpi_browser_subprocess/src/: camera_frame_callback.cpp  camera_frame_callback.hpp  ch_address_reader.cpp  ch_address_reader.hpp  env_var_callback.cpp  env_var_callback.hpp  gps_callback.cpp  gps_callback.hpp  gps_event_listener.cpp  gps_event_listener.hpp  gps_listener_thread.cpp  gps_listener_thread.hpp  main.cpp  main_app.cpp  main_app.hpp
carpi_master/: CMakeLists.txt
carpi_master/src/: main.cpp  main.hpp
carpi_master/src/comm/: CommServer.cpp  CommServer.hpp  IpcClientManager.cpp  IpcClientManager.hpp  IpcConnection.cpp  IpcConnection.hpp  IpcServer.cpp  comm_server.cpp  comm_server.hpp  ipc_client_manager.cpp  ipc_client_manager.hpp  ipc_connection.cpp  ipc_server.cpp  ipc_server.hpp
carpi_master/src/gl/: Buffers.cpp  Buffers.hpp  GraphicsDevice.cpp  Program.hpp  VertexElement.cpp  graphics_device.cpp  graphics_device.hpp  vertex_element.cpp  vertex_element.hpp
carpi_master/src/io/: LocalSchemeHandler.cpp  LocalSchemeHandler.hpp  local_scheme_handler.cpp  local_scheme_handler.hpp
carpi_master/src/ui/: FbRenderer.cpp  FbRenderer.hpp  WebApplication.cpp  WebApplication.hpp  WebClient.cpp  WebClient.hpp  WebCore.cpp  WebCore.hpp  event_manager.cpp  event_manager.hpp  web_application.cpp  web_application.hpp  web_client.cpp  web_client.hpp  web_core.cpp  web_core.hpp
carpi_master/ui/: main.html  test.html
carpi_master/ui/css/: main.css
carpi_master/ui/data/: plz_ch.csv
carpi_master/ui/js/: addresses_csv_reader.js  camera_frame.js  car_frame.js  csv_reader.js  event_manager.js  gauge.js  here_api.js  here_integration.js  main_sections.js  map_frame.js  nav_frame.js  plz_csv_reader.js  prototypes.js  routing.js  settings_frame.js  virtual_keyboard.js
carpi_master/ui/lib/: base64-binary.js
common_utils/: CMakeLists.txt
common_utils/include/common_utils/: any.hpp  byte_stream.hpp  conversion.hpp  error.hpp  io.hpp  log.hpp  network.hpp  process.hpp  random.hpp  singleton.hpp  string.hpp  time.hpp
common_utils/src/: any.cpp  byte_stream.cpp  conversion.cpp  error.cpp  log.cpp  network.cpp  process.cpp  random.cpp  string.cpp  time.cpp
common_utils/src/helper/: basen.hpp
common_utils/src/log/: Logger.cpp
data_server/: CMakeLists.txt
data_server/include/data_server/: http_connection.hpp  http_headers.hpp  http_request.hpp  http_response.hpp  http_server.hpp
data_server/src/: camera_handler.cpp  camera_handler.hpp  cookie_helper.cpp  cookie_helper.hpp  http_connection.cpp  http_headers.cpp  http_request.cpp  http_response.cpp  http_server.cpp  range_helper.cpp  range_helper.hpp
distance_broadcast/: CMakeLists.txt
distance_broadcast/resources/: config.toml
distance_broadcast/src/: bluetooth_broadcast.hpp  main.cpp  net_broadcast.cpp  net_broadcast.hpp
gps/: CMakeLists.txt
gps/include/gps/: gps_constants.hpp  gps_listener.hpp
gps/src/: gps_constants.cpp  gps_listener.cpp
gps_broadcast/: CMakeLists.txt
gps_broadcast/resources/: config.toml
gps_broadcast/src/: MqBroadcast.cpp  MqBroadcast.hpp  bluetooth_broadcast.cpp  bluetooth_broadcast.hpp  main.cpp  net_broadcast.cpp  net_broadcast.hpp
ipc_common/: CMakeLists.txt
ipc_common/include/ipc_common/: IpcPackage.hpp  IpcType.hpp  Opcodes.hpp  bluetooth_broadcast.hpp  ipc_mq.hpp  ipc_package.hpp  ipc_type.hpp  net_broadcast.hpp  opcodes.hpp
ipc_common/src/: IpcPackage.cpp  IpcType.cpp  Opcodes.cpp  bluetooth_broadcast.cpp  ipc_mq.cpp  ipc_package.cpp  ipc_type.cpp  net_broadcast.cpp  opcodes.cpp
net_utils/: CMakeLists.txt
net_utils/include/net_utils/: http_client.hpp  http_request.hpp  http_response.hpp  iface_utils.hpp  ssl_socket.hpp  udp_broadcast.hpp  udp_multicast.hpp  url_parser.hpp  websocket_client.hpp
net_utils/src/: http_client.cpp  http_request.cpp  http_response.cpp  iface_utils.cpp  ssl_socket.cpp  udp_broadcast.cpp  udp_multicast.cpp  url_parser.cpp  websocket_client.cpp
obd/: CMakeLists.txt  README.md
obd/include/obd/: EcuType.hpp  ObdCommand.hpp  ObdCommandList.hpp  ObdInterface.hpp  ResponseConverter.hpp
obd/src/: ObdCommand.cpp  ObdCommandList.cpp  ObdInterface.cpp  ResponseConverter.cpp
obd/src/msg/: ObdFrame.cpp  ObdMessage.cpp
obd/src/protocols/: AbstractCANProtocol.cpp  AbstractLegacyProtocol.cpp  AbstractOBDProtocol.cpp  CANProtocols.cpp  LegacyProtocols.cpp
obd/src/response/: AirflowRateCodec.cpp  Base40TemperatureCodec.cpp  BitArrayCodec.cpp  BitArrayResponseCodec.cpp  EngineLoadCodec.cpp  EngineRpmCodec.cpp  EngineRuntimeCodec.cpp  FuelPressureCodec.cpp  FuelTrimCodec.cpp  IntakeManifoldPressureCodec.cpp  (+4 more)
spotify_stream/: CMakeLists.txt
spotify_stream/resources/: api.toml  config.toml  spotify.toml
spotify_stream/src/: api_gateway.cpp  api_gateway.hpp  main.cpp  spotify_device.cpp  spotify_device.hpp  state_machine.cpp  state_machine.hpp  websocket_interface.cpp  websocket_interface.hpp
video_stream/: CMakeLists.txt
video_stream/src/: ConversionContext.cpp  H264Conversion.cpp  H264Stream.cpp  RawCameraStream.cpp
wiring_utils/: CMakeLists.txt
wiring_utils/src/: SerialInterface.cpp  bme280.cpp  bmp280.cpp  fingerprint_sensor.cpp  gpio.cpp  jsnsr04t_distance_sensor.cpp  serial_interface.cpp  temperature.cpp  tm1637_display.cpp  wiring_context.cpp
(+135 files in other folders)
